# projet_big_data_cytech_25_taxi

./: README.md  docker-compose.yml  pyproject.toml  requirement.txt
artifacts/: metrics.json  model.joblib
ex01_data_retrieval/: README.md  build.sbt
ex01_data_retrieval/src/main/scala/: Main.scala
ex02_data_ingestion/: README.md
ex02_data_ingestion/src/main/scala/: SparkApp.scala
ex03_sql_table_creation/: README.md  insertion.sql
ex04_dashboard/: README.md  app.py
ex05_ml_prediction_service/: README.md  requirements.txt
ex05_ml_prediction_service/artifacts/: predictions.csv
ex05_ml_prediction_service/scripts/: predict.py  train.py
ex05_ml_prediction_service/src/taxi_ml/: config.py  features.py  io.py  model.py  validate.py
ex05_ml_prediction_service/tests/: test_validate_infer.py  test_validate_train.py
ex06_airflow/: README.md
ex06_ml_airflow/: README.md
