[project]
name = "projet-big-data-cytech-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "psycopg2-binary",
    "matplotlib",
    "apache-airflow",
    "scikit-learn",
    "minio",
    "pyarrow",
    "joblib",
    "numpy",
    "pytest",
    "flake8",
    "s3fs>=2026.2.0",
    "plotly>=6.5.2",
]
